--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 POSTGRES_DB_URL=postgres+psycopg2://username:password@localhost:5432/buy-rent
 QUANDL_API_KEY=<ADD_YOUR_KEY>
+JWT_SECRET_KEY=<JWTSECRET>
