--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
 Flask-Cors==3.0.10
+Flask-JWT-Extended==3.25.1
 Flask-RESTful==0.3.8
 idna==2.10
 inflection==0.3.1
@@ -14,6 +15,7 @@ more-itertools==5.0.0
 numpy==1.16.6
 pandas==0.24.2
 psycopg2-binary==2.8.6
+PyJWT==1.7.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2021.1
